--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -11,7 +11,7 @@
     <header>
         <div>
             <a href="#">
-                <img src="https://via.placeholder.com/150x50.png?text=SoundMaster+Logo" alt="Logo">
+                <img src="https://res.cloudinary.com/dd6tzkye0/image/upload/v1737148697/images_3_a6eaja.jpg" alt="Logo">
             </a>
             <div>
                 <a href="#">Home</a>
